# devserver-mcp

./: .coveragerc  .gitignore  .mcp.json  .rules  CHANGES.md  CHANGES_AI.md  CLAUDE.md  INVESTIGATION_SUMMARY.md  README.md  baseline_fastapi.txt  baseline_vite.txt  debug_startup.py  devserver.yml  devservers-both-test.yml  devservers-fastapi-test.yml  devservers-vite-test.yml  devservers.yml  pyproject.toml  pytest.ini  ruff.toml  test_ansi_comparison.py  test_autostart.py  test_terminal_output.py  test_unsilenced.py
.github/: copilot-instructions.md  renovate.json
.github/workflows/: tests.yml
docs/: color_passthrough_refactoring_plan.md  debug_mode_plan.md  design.md  design_addendum.md  jules_instructions.md  mcp-server-testing-plan.md  playwright_implementation_plan.md  playwright_specs.md  playwright_testing_challenges.md  process_management_refactor.md  refactor-implementation-plan.md  refactor_get_devserver_statuses.md  refactoring-plan.md  test-fix-plan.md  test-refactoring-plan.md  testing_color_passthrough.md  writing_tests.md
src/devserver_mcp/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  log_storage.py  manager.py  mcp_client.py  mcp_server.py  playwright.py  playwright_manager.py  process.py  settings.py  state.py  types.py  ui.py  utils.py
src/devserver_mcp/web/static/: index.html
src/devserver_mcp/web_manager/: __init__.py  app.py  auth.py  config.py  dependencies.py  file_ops.py  interfaces.py  process_manager.py  registry.py  server.py  websocket_manager.py
test-temp/: devservers.yml
tests/: conftest.py  test_api_integration.py  test_cli.py  test_config.py  test_config_resilience.py  test_devserver_mcp.py  test_error_handling.py  test_log_pagination.py  test_log_storage.py  test_manager.py  test_mcp_logging.py  test_mcp_server.py  test_playwright_early_exit.py  test_playwright_logging.py  test_playwright_mcp.py  test_playwright_missing_module.py  test_playwright_screenshot.py  test_playwright_startup_issue.py  test_process.py  test_process_management.py  test_security.py  test_server_box_status_update.py  test_state.py  test_terminal_output.py  test_ui.py  test_user_workflows.py  test_utils.py  test_websocket.py
