[project]
name = "devserver-mcp"
dynamic = ["version"]
description = "MCP server for managing dev servers"
readme = "README.md"
authors = [{ name = "Ville Säävuori", email = "ville@unessa.net" }]
requires-python = ">=3.14.3"
dependencies = [
    "click>=8.3.1",
    "fastmcp>=2.14.5",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "textual>=5.3.0",
]

[project.scripts]
devservers = "devserver_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/devserver_mcp/__init__.py"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.135.1",
    "playwright>=1.58.0",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.3.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.5",
]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
