[project]
name = "devserver-mcp"
dynamic = ["version"]
description = "MCP server for managing dev servers"
readme = "README.md"
authors = [{ name = "Ville Säävuori", email = "ville@unessa.net" }]
requires-python = ">=3.14.6"
dependencies = [
    "click>=8.4.2",
    "fastmcp>=2.14.7",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "textual>=5.3.0",
]

[project.scripts]
devservers = "devserver_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/devserver_mcp/__init__.py"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.138.2",
    "playwright>=1.61.0",
    "pyright>=1.1.411",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.3.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.20",
]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
